clients/atlas-tui/tests/snapshots/golden_settings__method__the_cap_box_renders_at_120x36.snap
---
source: tests/golden_settings.rs
expression: "client.frame(120, 36)"
---
" ACWI 152.47 ▼1.34%   SPY 729.46 ▼1.54%   QQQ 661.73 ▼2.04%   XLK 285.24 ▼2.08%   XLF 52.40 ▲1.24%   ACWI 152.47 ▼1.34% "
" 1 ATLAS│▌ DESK                               ▌ NEWS                                  │▌ PULSE                          "
" 2 DESK │ mode         SYNTHETIC               nothing has said what this desk reads  │ desk stress  …                  "
" 3 MKTS │ data         synthetic                                                      │ regime CALM  robust UNCERTAIN   "
" 4 BOOK │ book         simulated                                                      │ drawdown 0.0%  tier NONE        "
" 5 RSCH │ lane         offline · synthetic                                            │ gross 100.0%                    "
" 6 PRED │ alpaca login no ALPACA_API_KEY_ID                                           │                                 "
" 7 WORK │in the environment or .env                                                   │▌ BREADTH                        "
" 8 AUDIT│                                                                             │ ███████████████████████████████ "
"▌9 SETT │                                                                             │ adv 1 / dec 4                   "
" 0 VIS  │──────────────────────────────────── ────────────────────────────────────────│                                 "
"        │▌ METHOD                               ▌ SYSTEM                              │▌ MOVERS                         "
"        │ solving ┌────────────────────────────────────────────────────────┐          │ ▲ best  XLF    +1.24%           "
"        │ ▸ hrp   │▌ HOW MANY NAMES                                        │d         │ ▼ worst XLK    -2.08%           "
"        │   risk_p│                                                        │          │                                 "
"        │   min_va│ names        ▏                                         │          │▌ REGIME                         "
"        │ not choo│                                                        │          │ … waiting for the regime panel  "
"        │   regime│ between 1 and 7 — the names this desk watches          │          │                                 "
"        │   ▾ 2 mo│ this desk has no cap today — the method holds what it  │          │                                 "
"        │ m method│holds                                                   │──────────│                                 "
"        │▌ POLICY │ Enter sends it · an empty box or 0 clears the cap · Esc│          │                                 "
"        │ policy  │leaves it                                               │          │                                 "
"        │ method  │                                                        │.5:7b     │                                 "
"        │ algorith└────────────────────────────────────────────────────────┘          │▌ ATLAS READ                     "
"        │ objective    hrp                       workforce    claude · tiers decide   │ state      STRESS               "
"        │ solver       hrp                       web          -- · chat, /cli tools   │ agreement  ALIGNED              "
"        │ long only    yes                       workflows    -- · owner-enforced     │ conviction 84.0%                "
"        │ budget       100.0%                    build        -- · the /build key     │ news       alpaca               "
"        │ per asset    0.0% – 40.0%              only workflows off is owner-refused  │─────────────────────────────────"
"        │──────────────────────────────────────  /cli, /build: claude, not ollama     │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │ Current evidence favors the robust    ──────────────────────────────────────│ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │HRP benchmark out of sample; MVSK      ▌ UNIVERSE                            │ ⠤⢄⣀⣀⣀⠤⠔⠊⠉⠉⠉⠒                    "
"        │▌ THEME                                 watching     7 symbols               │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │ palette      obsidian · truecolor      ACWI SPY QQQ XLK XLF BNDW DUST       │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │────────────────────────────────────── ──────────────────────────────────────│ WATCHING                        "
" /command …   http://127.0.0.1:8765                                   ● SSE  ● OWNER  SYNTHETIC  propose·auto  OPERATOR "
