clients/atlas-tui/tests/snapshots/golden_settings__method__the_method_picker_renders_at_120x36.snap
---
source: tests/golden_settings.rs
assertion_line: 2799
expression: "client.frame(120, 36)"
---
" ACWI 152.47 ▼1.34%   SPY 729.46 ▼1.54%   QQQ 661.73 ▼2.04%   XLK 285.24 ▼2.08%   XLF 52.40 ▲1.24%   ACWI 152.47 ▼1.34% "
" 1 ATLAS│▌ DESK                               ▌ NEWS                                  │▌ PULSE                          "
" 2 DESK │ mode         SYNTHETIC               nothing has said what this desk reads  │ desk stress  …                  "
" 3 MKTS │ data         synthetic                                                      │ regime CALM  robust UNCERTAIN   "
" 4 BOOK │ book         simulated                                                      │ drawdown 0.0%  tier NONE        "
" 5 RSCH │ lane         offline · synthetic                                            │ gross 100.0%                    "
" 6 PRED │ alpaca login no ALPACA_API_KEY_ID                                           │                                 "
" 7 WORK │in the environment or .env                                                   │▌ BREADTH                        "
" 8 AUDIT│                                                                             │ ███████████████████████████████ "
"▌9 SETT │                                                                             │ adv 1 / dec 4                   "
" 0 VIS  │─────────┌────────────────────────────────────────────────────────┐──────────│                                 "
"        │▌ AUTHORI│▌ HOW THIS DESK SOLVES                                  │          │▌ MOVERS                         "
"        │ nothing │                                                        │          │ ▲ best  XLF    +1.24%           "
"        │         │ ▸ hrp               B2  Hierarchical risk parity  now  │d         │ ▼ worst XLK    -2.08%           "
"        │         │   risk_parity       B3  Equal risk contribution        │          │                                 "
"        │         │   min_variance      A1  Minimum variance               │          │▌ REGIME                         "
"        │─────────│ Current evidence favors the robust HRP benchmark out of│          │ … waiting for the regime panel  "
"        │▌ METHOD │sample.                                                 │          │                                 "
"        │ solving │                                                        │          │                                 "
"        │ ▸ hrp   │   regime_min_variance   not choosable — research stage │──────────│                                 "
"        │   risk_p│   views_conditioned_mi… not choosable — research stage │          │                                 "
"        │   min_va│   cardinal_min_variance not choosable — research stage │          │                                 "
"        │ not choo│ Enter solves with it from the next run · ↑↓ moves · Esc│.5:7b     │                                 "
"        │   regime│leaves it                                               │          │▌ ATLAS READ                     "
"        │   ▾ 2 mo│                                                        │ decide   │ state      STRESS               "
"        │ m method└────────────────────────────────────────────────────────┘i tools   │ agreement  ALIGNED              "
"        │▌ POLICY                                workflows    -- · refused for chat   │ conviction 84.0%                "
"        │ policy       hrp · hrp · hrp · hrp     build        -- · the /build key     │ news       alpaca               "
"        │ long only    yes                       nothing here binds a non-chat caller │─────────────────────────────────"
"        │ budget       100.0%                    chat: ollama · /cli: claude's verb   │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │ per asset    0.0% – 40.0%             ──────────────────────────────────────│ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │────────────────────────────────────── ▌ UNIVERSE                            │ ⠤⢄⣀⣀⣀⠤⠔⠊⠉⠉⠉⠒                    "
"        │▌ THEME                                 watching     7 symbols               │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │ palette      obsidian · truecolor      ACWI SPY QQQ XLK XLF BNDW DUST       │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │────────────────────────────────────── ──────────────────────────────────────│ WATCHING                        "
" /command …   http://127.0.0.1:8765                                   ● SSE  ● OWNER  SYNTHETIC  propose·auto  OPERATOR "
