clients/atlas-tui/tests/snapshots/golden_settings__method__the_warned_method_card_renders_at_120x36.snap
---
source: tests/golden_settings.rs
expression: "client.frame(120, 36)"
---
" ACWI 152.47 ▼1.34%   SPY 729.46 ▼1.54%   QQQ 661.73 ▼2.04%   XLK 285.24 ▼2.08%   XLF 52.40 ▲1.24%   ACWI 152.47 ▼1.34% "
" 1 ATLAS│▌ DESK                               ▌ NEWS                                  │▌ PULSE                          "
" 2 DESK │ mode         SYNTHETIC               nothing has said what this desk reads  │ desk stress  …                  "
" 3 MKTS │ data         synthetic                                                      │ regime CALM  robust UNCERTAIN   "
" 4 BOOK │ book         simulated                                                      │ drawdown 0.0%  tier NONE        "
" 5 RSCH │ lane         offline · synthetic                                            │ gross 100.0%                    "
" 6 PRED │ alpaca login no ALPACA_API_KEY_ID                                           │                                 "
" 7 WORK │in the environment or .env                                                   │▌ BREADTH                        "
" 8 AUDIT│                                                                             │ ███████████████████████████████ "
"▌9 SETT │                                                                             │ adv 1 / dec 4                   "
" 0 VIS  │──────────────────────────────────── ────────────────────────────────────────│                                 "
"        │▌ METHOD                               ▌ SYSTEM                              │▌ MOVERS                         "
"        │ solving      hrp · B2 · cap 5          desk         paper                   │ ▲ best  XLF    +1.24%           "
"        │ Hierarchical risk parity holds every   provenance   synthetic · 0 d         │ ▼ worst XLK    -2.08%           "
"        │ name; a cap of 5 will refuse its       claude       available               │                                 "
"        │ plans · a cap of 5 cannot reach 100%   mcp          qlab-operator           │▌ REGIME                         "
"        │ at a 40% per-asset cap; every plan     proxy        available               │ … waiting for the regime panel  "
"        │ will refuse                            workforce    available               │                                 "
"        │ ▾ 3 to choose · 3 research stage       authority    propose_only            │                                 "
"        │ m method · k cap ──────────────────── ──────────────────────────────────────│                                 "
"        │▌ POLICY                               ▌ MODELS                              │                                 "
"        │ policy       hrp                       probed       12s ago                 │                                 "
"        │ method       Hierarchical risk parity  reasoner     ollama · qwen2.5:7b     │                                 "
"        │ algorithm    hrp                       judgment     on                      │▌ ATLAS READ                     "
"        │ objective    hrp                       workforce    claude · tiers decide   │ state      STRESS               "
"        │ solver       hrp                       web          -- · chat, /cli tools   │ agreement  ALIGNED              "
"        │ long only    yes                       workflows    -- · refused for chat   │ conviction 84.0%                "
"        │ budget       100.0%                    build        -- · the /build key     │ news       alpaca               "
"        │ per asset    0.0% – 40.0%              nothing here binds a non-chat caller │─────────────────────────────────"
"        │──────────────────────────────────────  /cli, /build: claude, not ollama     │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │ Current evidence favors the robust    ──────────────────────────────────────│ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │HRP benchmark out of sample; MVSK      ▌ UNIVERSE                            │ ⠤⢄⣀⣀⣀⠤⠔⠊⠉⠉⠉⠒                    "
"        │▌ THEME                                 watching     7 symbols               │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │ palette      obsidian · truecolor      ACWI SPY QQQ XLK XLF BNDW DUST       │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │────────────────────────────────────── ──────────────────────────────────────│ WATCHING                        "
" /command …   http://127.0.0.1:8765                                   ● SSE  ● OWNER  SYNTHETIC  propose·auto  OPERATOR "
